--- a/index.html
+++ b/index.html
@@ -4,41 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="estilos/style.css">
+    <title></title>
 </head>
 <body>
-    <!-- Meta Pixel Code -->
-<script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '5158370607604589');
-    fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=5158370607604589&ev=PageView&noscript=1"
-  /></noscript>
-  <!-- End Meta Pixel Code -->
-    <header>
-        <h1>Clique no botão abaixo para continuar</h1>
-    </header>
-    <main>
-        <h2><a href="https://go.hotmart.com/M73234338D">CLIQUE AQUI</a></h2>
-    </main>
-    <footer>
-        <p>
-            2022 - Copyright - Todos os direitos reservados
-        </p>
-        <p>
-        <a href="https://docs.google.com/document/d/1vwdOF0I44BEOPqQliXNVYJX_uSpqZTTn5nt4vebVo-A/edit?usp=sharing" target="_blank">Termos de uso</a> - <a href="https://docs.google.com/document/d/1vwdOF0I44BEOPqQliXNVYJX_uSpqZTTn5nt4vebVo-A/edit?usp=sharing" target="_blank">Política de Privacidade</a>
-        </p>
-    </footer>
     
 </body>
 </html>
