criação do topo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Receitas sem Glutem ou açucar.</title>
+    <link rel="stylesheet" href="stilo.css">
 </head>
 <body>
+    <section class="topo">
+        <section class="txttopo"><h1>RECEITAS DELICIOSAS PARA VOCÊ NÃO TER QUE SE PRIVAR DE NADA, E COMER OS MAIS DIFERENTES E DELICIOSOS TIPOS DE COMIDAS!</h1></section>
+    <id id="video">
+            <iframe width="590" height="315" src="https://www.youtube.com/embed/tmoC6ppEgfM?start=8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </id>
+        <a href="#" class="btcompra">
+            <p>SIM! EU QUERO COMPRAR AGORA</p>
+        </a>
+       
+        <img src="imagens/ftgarantia.png" alt="Compra Segura" class="garantia">
+    </section>
+    <section class="ben">
+        <h2>VEJA OS BENEFÍCIOS DE USAR NOSSAS RECEITAS</h2>
+        <div class="divben">
+            <div class="divben2">
+                <h3>NÃO SE PREOCUPE COM A GLICEMIA
+                </h3>
+                <p>
+                    font-family: "Poppins", Sans-serif;
+                    font-size: 19px;
+                    font-weight: 300;
+                    Todas as receitas foram criadas para te proporcionar uma alimentação com muito sabor e prazer, ao mesmo tempo que te ajudam a ter o controle dos índices glicêmicos.
+                </p>
+            </div>
+        </div>
+        <div class="divben">
+            <div class="divben2">
+                <h3>COMA O QUE VOCÊ GOSTA</h3>
+                <p>Você vai ter centenas de opções de receitas para nunca enjoar e nunca comer a mesma coisa. O material foi feito para quem quer ter uma vida saudável e sem restrições.</p>
+            </div>
+        </div>
+        <div class="divben">
+            <div class="divben2">
+                <h3>TENHA UM SONO DE QUALIDADE
+                </h3>
+                <p>A má qualidade do SONO é uma consequência do diabetes. As receitas ajudam na neutralização da NEUROPATIA DIABÉTICA, tornando o sono TRANQUILO e DURADOURO</p>
+            </div>
+        </div>
+        <div class="divben">
+            <div class="divben2">
+                <h3>OS NÍVEIS DE ESTRESSE DIMINUEM</h3>
+                <p>Ao controlar a glicemia e manter o corpo em equilíbrio, a mente também se beneficia e muito, fazendo com que a liberação de hormônios e o nível de estresse seja baixíssimo.</p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
