--- a/index.html
+++ b/index.html
@@ -21,37 +21,47 @@
     </section>
     <section class="ben">
         <h2>VEJA OS BENEFÍCIOS DE USAR NOSSAS RECEITAS</h2>
-        <div class="divben">
-            <div class="divben2">
-                <h3>NÃO SE PREOCUPE COM A GLICEMIA
-                </h3>
-                <p>
-                    font-family: "Poppins", Sans-serif;
-                    font-size: 19px;
-                    font-weight: 300;
-                    Todas as receitas foram criadas para te proporcionar uma alimentação com muito sabor e prazer, ao mesmo tempo que te ajudam a ter o controle dos índices glicêmicos.
-                </p>
+
+        <div id="benef">
+            <div class="divben">
+                    <h3>NÃO SE PREOCUPE COM A GLICEMIA</h3>
+                    <p>
+                        font-family: "Poppins", Sans-serif;
+                        font-size: 19px;
+                        font-weight: 300;
+                        Todas as receitas foram criadas para te proporcionar uma alimentação com muito sabor e prazer, ao mesmo tempo que te ajudam a ter o controle dos índices glicêmicos.
+                    </p>
+            </div>
+            <div class="divben">
+                    <h3>COMA O QUE VOCÊ GOSTA</h3>
+                    <p>Você vai ter centenas de opções de receitas para nunca enjoar e nunca comer a mesma coisa. O material foi feito para quem quer ter uma vida saudável e sem restrições.</p>
+            </div>
+            <div class="divben">
+                    <h3>TENHA UM SONO DE QUALIDADE
+                    </h3>
+                    <p>A má qualidade do SONO é uma consequência do diabetes. As receitas ajudam na neutralização da NEUROPATIA DIABÉTICA, tornando o sono TRANQUILO e DURADOURO</p>
+            </div>
+            <div class="divben">
+                    <h3>OS NÍVEIS DE ESTRESSE DIMINUEM</h3>
+                    <p>Ao controlar a glicemia e manter o corpo em equilíbrio, a mente também se beneficia e muito, fazendo com que a liberação de hormônios e o nível de estresse seja baixíssimo.</p>
             </div>
         </div>
-        <div class="divben">
-            <div class="divben2">
-                <h3>COMA O QUE VOCÊ GOSTA</h3>
-                <p>Você vai ter centenas de opções de receitas para nunca enjoar e nunca comer a mesma coisa. O material foi feito para quem quer ter uma vida saudável e sem restrições.</p>
-            </div>
-        </div>
-        <div class="divben">
-            <div class="divben2">
-                <h3>TENHA UM SONO DE QUALIDADE
-                </h3>
-                <p>A má qualidade do SONO é uma consequência do diabetes. As receitas ajudam na neutralização da NEUROPATIA DIABÉTICA, tornando o sono TRANQUILO e DURADOURO</p>
-            </div>
-        </div>
-        <div class="divben">
-            <div class="divben2">
-                <h3>OS NÍVEIS DE ESTRESSE DIMINUEM</h3>
-                <p>Ao controlar a glicemia e manter o corpo em equilíbrio, a mente também se beneficia e muito, fazendo com que a liberação de hormônios e o nível de estresse seja baixíssimo.</p>
-            </div>
-        </div>
+    </section>
+    <section id="fotos1">
+        <h2>SÃO MAIS DE 500 RECEITAS PARA TODAS AS REFEIÇÕES DO SEU DIA E QUE VÃO TE AJUDAR A TER UMA VIDA MUITO MAIS SABOROSA E SAUDÁVEL!</h2>
+
+            <div><img src="imagens/ft001.png" alt="pão">
+            <p>RECEITAS PARA CAFÉ DA MANHÃ E LANCHES QUE VOCÊ NUNCA VIU ANTES! MODO DE PREPARO RÁPIDO COM INGREDIENTES PRÁTICOS E BARATOS!</p></div>
+            <div><img src="imagens/ft002.png" alt="carne">
+            <p>USE E ABUSE DOS MAIS DIFERENTES E SABOROSOS PRATOS PARA O SEU DIA-A-DIA E EVENTOS ESPECIAIS! FEITOS COM INGREDIENTES QUE VOCÊ TEM EM CASA E QUE NÃO VÃO DESCONTROLAR A SUA GLICEMIA.</p></div>
+            <div><img src="imagens/ft003.png" alt="bolo">
+            <p>SÃO MAIS DE 100 OPÇÕES DE DOCES E SOBREMESAS SEM GLÚTEN E SEM AÇÚCAR PARA VOCÊ FAZER QUANTAS VEZES E A QUANTIDADE QUE QUISER E COMER SEM CULPA NENHUMA!</p></div>
+            <div><img src="imagens/ft004.png" alt="sopa">
+            <p>SOPAS, CREMES, CALDOS, TUDO ELABORADO COM INGREDIENTES NUTRITIVOS E TEMPEROS ESPECIAIS!</p></div>
+            <div><img src="imagens/ft005.jpg" alt="creme">
+            <p>MOLHOS E PATÊS DE DAR ÁGUA NA BOCA QUE VÃO DAR UM TOQUE ESPECIAL E SABOROSO NOS SEUS PRATOS! A SUA ALIMENTAÇÃO NUNCA MAIS SERÁ A MESMA!</p></div>
+            <div><img src="imagens/ft005.png" alt="ingredientes">
+            <p>TODAS SEM GLÚTEN E COM BAIXO ÍNDICE GLICÊMICO PARA VOCÊ PREPARAR BOLOS, PÃES, DOCES E OUTROS PRATOS SEM PREOCUPAÇÃO.</p></div>
     </section>
     
 </body>
