adição de section

--- a/index.html
+++ b/index.html
@@ -94,8 +94,39 @@
                 <h2>Por apenas <span>10x</span> de <span>R$11,08</span></h2>
             </div>
 
+            <a href="#" class="btcompra" >
+                <p style="background-color:rgb(22, 125, 22); padding-top: 30px;">SIM! EU QUERO COMPRAR AGORA</p>
+            </a> 
         </section>
-            
+        <section id="sec6">
+            <h1>QUEM COMPROU, APROVOU!</h1>
+            <p>VEJA A OPINIÃO SINCERA DE QUEM ADQUIRIU NOSSAS RECEITAS:
+            </p>
+            <div><img src="imagens/ft040.png" alt="print"></div>
+        </section>
+        <section id="sec7">
+            <div>
+                <img src="imagens/ftmariana.png" alt="mariana">
+                <h2>Mariana</h2>
+                <p>“Estou amando o material, muito prático e bonito. Gostei tanto que recomendei para algumas amigas. Muito obrigada pelo material e pela atenção. Aprovadíssimo!”</p>
+            </div>
+            <div>
+                <div><img src="imagens/ftmariaantonia.png" alt="maria antonia"></div>
+                <h2>Maria Antônia</h2>
+                <p>“Adorei as receitas, são simples e fácil de preparar. Todas que eu fiz até agora eu já tinha os ingredientes em casa. Muito prático. Recomendo, estou muito satisfeita. Sou diabética, e essas receitas estão me ajudando muito a equilibrar minha glicemia”</p>
+            </div>
+            <div>
+                <img src="imagens/ftjose.png" alt="mariana">
+                <h2>José Dirceu</h2>
+                <p>“Minha esposa viu o anuncio no Facebook e resolvemos comprar. Até eu que não sou de cozinhar fiz uma e deu certo, me animei para fazer outras hehehe, paguei com cartão de crédito para receber na hora, deu tudo certinho. Recomendo sim!”</p>
+            </div>
+        </section>
+        <section id="sec8">
+            <div><iframe width="560" height="315" src="https://www.youtube.com/embed/8bEbPAm44lQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/KhfljIQ99Vo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
         
     </main>
 </body>
