adição de sections

--- a/index.html
+++ b/index.html
@@ -127,6 +127,33 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/KhfljIQ99Vo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
+        <section id="sec9">
+            <div id="secnum">
+                <h2>VOCÊ SABIA QUE FOI PROVADO POR MÉDICOS E NUTRICIONISTAS QUE A ALIMENTAÇÃO É A CHAVE PARA O CONTROLE TOTAL DO DIABETES? </h2>
+                <h3>A CADA ANO CRESCE O NÚMERO DE DIABÉTICOS QUE DESCOBREM ESSE SEGREDO E MUDAM DE VIDA! VEJA O QUE FALAM OS DADOS DAS PESQUISAS MAIS RECENTES:</h3>
+                <div class="flex9">
+                    <div class="sec9"> <h1>+
+                        7.000.000
+                        </h1>
+                    <p>Mais de 7 milhões de pessoas no mundo perderam peso e controlaram o diabetes</p></div>
+                    <div class="sec9"><h1>+
+                        1.000</h1>
+                    <p>É uma mudança de hábitos indicada para quem quer controlar a diabetes de forma natural e sem medicamentos</p></div>
+                    <div class="sec9"> <h1>+
+                        6.257.314
+                        </h1> <p>6,257 milhões de pessoas em todo o mundo disseram ter tido dezenas de benefícios apenas mudando a alimentação.</p></div>
+            </div>
+            </div>
+        </section>
+        <section id="sec10">
+            <div> <img src="imagens/ft050.png" alt="selo de garantia"></div>
+            <div>
+            <h2>GARANTIA INCONDICIONAL</h2>
+            <p>
+                Se você comprar nosso e-book e por algum motivo não gostar, basta nos pedir o seu dinheiro de volta em até 7 dias depois da compra e nós devolvemos 100% dele, sem nenhuma burocracia!</p></div>
+
+
+        </section>
         
     </main>
 </body>
