--- a/index.html
+++ b/index.html
@@ -82,7 +82,20 @@
             </div>
         </section>
         <section id="fotos2">
-            <img src="imagens/ft011.png" alt="">
+               <div class="slidet">
+                <div> <img src="imagens/ft011.png" alt=""></div>   
+                <div><img src="imagens/ft012.png" alt=""></div>   
+                <div> <img src="imagens/ft013.png" alt=""></div>   
+                <div><img src="imagens/ft014.png" alt=""></div>  
+                <div> <img src="imagens/ft015.png" alt=""></div>   
+                <div><img src="imagens/ft016.png" alt=""></div>  
+                <div> <img src="imagens/ft017.png" alt=""></div>   
+                <div><img src="imagens/ft018.png" alt=""></div>    
+                <div><img src="imagens/ft019.png" alt=""></div> 
+                <div><img src="imagens/ft020.png" alt=""></div> 
+                <div><img src="imagens/ft021.png" alt=""></div> 
+                <div><img src="imagens/ft022.png" alt=""></div>         
+            </div>
         </section>
         <section id="sec5">
             <div class="sec5">
@@ -220,3 +233,17 @@
 				
 </body>
 </html>
+
+<!--  <div><img src="imagens/ft011.png" alt=""></div>
+                <div><img src="imagens/ft012.png" alt=""></div>
+
+                <div><img src="imagens/ft013.png" alt=""></div>
+                div><img src="imagens/ft014.png" alt=""></div>
+                div><img src="imagens/ft015.png" alt=""></div>
+                div><img src="imagens/ft016.png" alt=""></div>
+                div><img src="imagens/ft017.png" alt=""></div>
+                div><img src="imagens/ft018.png" alt=""></div>
+                div><img src="imagens/ft019.png" alt=""></div>
+                div><img src="imagens/ft020.png" alt=""></div>
+                div><img src="imagens/ft021.png" alt=""></div>
+                div><img src="imagens/ft022.png" alt=""></div>-->
