--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                 <p>Todas as informações e conceitos utilizados aqui tem como objetivo apenas informar e educar. Este site e o e-book 500 Receitas ZERO Açúcar e Glúten foram disponibilizados com esse objetivo e não tem como intenção nenhuma servir ou substituir prescrição médica. Nenhuma informação deste site e do e-book 500 Receitas ZERO Açúcar e Glúten substitui uma consulta com seu médico, nutricionista ou profissional da saúde. Sempre procure um profissional da saúde antes de começar qualquer mudança na sua alimentação, inclusive o uso das receitas deste e-book.</p>
                     <p>Se por algum motivo você não gostar do material, ou achar que não serve pra você, não se preocupe, você tem uma garantia de 7 dias úteis a partir do momento da entrega. Para mais informações entre em contato conosco: contato@500receitaszero.com</p>
                     <p>COPYRIGHT 2021 | 500 RECEITAS ZERO AÇÚCAR E GLÚTEN – TODOS OS DIREITOS RESERVADOS.</p>
+                    <p>fim</p>
             </div>
         </footer>
     </main>
@@ -233,17 +234,3 @@
 				
 </body>
 </html>
-
-<!--  <div><img src="imagens/ft011.png" alt=""></div>
-                <div><img src="imagens/ft012.png" alt=""></div>
-
-                <div><img src="imagens/ft013.png" alt=""></div>
-                div><img src="imagens/ft014.png" alt=""></div>
-                div><img src="imagens/ft015.png" alt=""></div>
-                div><img src="imagens/ft016.png" alt=""></div>
-                div><img src="imagens/ft017.png" alt=""></div>
-                div><img src="imagens/ft018.png" alt=""></div>
-                div><img src="imagens/ft019.png" alt=""></div>
-                div><img src="imagens/ft020.png" alt=""></div>
-                div><img src="imagens/ft021.png" alt=""></div>
-                div><img src="imagens/ft022.png" alt=""></div>-->
