--- a/index.html
+++ b/index.html
@@ -27,22 +27,25 @@
             <i aria-hidden="true" class="fas fa-check"></i>
             <div id="benef">
                 <div class="divben">
-        
+                        <img src="imagens/check.jpg" alt="check">
                         <h3>NÃO SE PREOCUPE COM A GLICEMIA</h3>
                         <p>
                             Todas as receitas foram criadas para te proporcionar uma alimentação com muito sabor e prazer, ao mesmo tempo que te ajudam a ter o controle dos índices glicêmicos.
                         </p>
                 </div>
                 <div class="divben">
+                    <img src="imagens/check.jpg" alt="check">
                         <h3>COMA O QUE VOCÊ GOSTA</h3>
                         <p>Você vai ter centenas de opções de receitas para nunca enjoar e nunca comer a mesma coisa. O material foi feito para quem quer ter uma vida saudável e sem restrições.</p>
                 </div>
                 <div class="divben">
+                    <img src="imagens/check.jpg" alt="check">
                         <h3>TENHA UM SONO DE QUALIDADE
                         </h3>
                         <p>A má qualidade do SONO é uma consequência do diabetes. As receitas ajudam na neutralização da NEUROPATIA DIABÉTICA, tornando o sono TRANQUILO e DURADOURO</p>
                 </div>
                 <div class="divben">
+                    <img src="imagens/check.jpg" alt="check">
                         <h3>OS NÍVEIS DE ESTRESSE DIMINUEM</h3>
                         <p>Ao controlar a glicemia e manter o corpo em equilíbrio, a mente também se beneficia e muito, fazendo com que a liberação de hormônios e o nível de estresse seja baixíssimo.</p>
                 </div>
@@ -177,15 +180,13 @@
                 <h3>
                     VEJA O QUE VOCÊ VAI RECEBER</h3>
                     <ul>
-                        <li>500 RECEITAS DELICIOSAS E PRÁTICAS</li>
-                        <li>TODAS AS RECEITAS SEM GLÚTEN</li>
-                        <li>
-                            TODAS AS RECEITAS SEM AÇÚCAR</li>
-                        <li>RECEITAS PARA TODAS AS REFEIÇÕES DO SEU DIA</li>
-                        <li>MODO DE PREPARO COMPLETO COM PASSO A PASSO</li>
-                        <li>MATERIAL DE FÁCIL IMPRESSÃO</li>
-                        <li>
-                            ENTREGA IMEDIATA VIA E-MAIL</li>
+                        <li><p>500 RECEITAS DELICIOSAS E PRÁTICAS</p></li>
+                        <li><p>TODAS AS RECEITAS SEM GLÚTEN</p></li>
+                        <li><p>TODAS AS RECEITAS SEM AÇÚCAR</p></li>
+                        <li><p>RECEITAS PARA TODAS AS REFEIÇÕES DO SEU DIA</p></li>
+                        <li><p>MODO DE PREPARO COMPLETO COM PASSO A PASSO</p></li>
+                        <li><p>MATERIAL DE FÁCIL IMPRESSÃO</p></li>
+                        <li><p>ENTREGA IMEDIATA VIA E-MAIL</p></li>
                     </ul>
                     <p class="corte">De R$127,00 por</p>
                     <h2 class="preco">R$97,00</h2>
@@ -209,13 +210,16 @@
         <section id="duvidas">
             <div class="duvidas">
                 <h2>DÚVIDAS FREQUENTES</h2>
-                <ul>
-                    <li>COMO VOU RECEBER O MATERIAL?  </li>
-                    <li>AS RECEITAS SUBSTITUEM A MEDICAÇÃO QUE EU TOMO?</li>
-                    <li>EU TOMO REMÉDIO CONTROLADO, DEVO CONSULTAR O MÉDICO ANTES DE FAZER AS RECEITAS?</li>
-                    <li>QUAIS SÃO AS FORMAS DE PAGAMENTO? É SEGURO?</li>
-                </ul>
-            </div>
+                <details>
+                    <summary>COMO VOU RECEBER O MATERIAL?</summary>
+                    <p>O envio é imediato após a confirmação do pagamento, você receberá um link para download no e-mail. Ele poderá ser acessado no computador, tablet ou celular e imprimido com muita facilidade se você desejar.</p>
+                </details>
+               <details><summary>AS RECEITAS SUBSTITUEM A MEDICAÇÃO QUE EU TOMO?</summary><p>Não.</br>
+                Definitivamente, as nossas receitas não incentivam o abandono de todo ou qualquer medicação já receitada</p></details>
+               <details><summary>EU TOMO REMÉDIO CONTROLADO, DEVO CONSULTAR O MÉDICO ANTES DE FAZER AS RECEITAS?</summary><p>As receitas divulgadas nesse material têm apenas a função de fornecer alternativas mais saudáveis, com ingredientes mais nutritivos, o que pode não se aplicar a casos específicos. Consulte sempre um profissional (nutricionista ou médico) para saber quais alimentos e suplementos nutricionais são indicados em seu caso.</p></details>
+               <details><summary>QUAIS SÃO AS FORMAS DE PAGAMENTO? É SEGURO?</summary><p>Trabalhamos com todos os cartões de crédito e com boleto bancário.</br>
+                Dica*: Ao pagar com o cartão de crédito, você garante o desconto e ainda recebe em segundos todo o material completo no seu e-mail e já começa a controlar o diabetes ainda hoje.</p></details>                
+            </div>            
         </section>
         <footer>
             <div class="fot">
