--- a/index.html
+++ b/index.html
@@ -12,76 +12,76 @@
 <body>
     <main>
         <header class="topo">
-            <section class="txttopo"><h1>RECEITAS DELICIOSAS PARA VOCÊ NÃO TER QUE SE PRIVAR DE NADA, E COMER OS MAIS DIFERENTES E DELICIOSOS TIPOS DE COMIDAS!</h1></section>
+            <section class="txttopo"><h1>Coma sem restrição as mais variadas e deliciosas receitas!</h1></section>
         <div id="video">
                 <iframe width="590" height="315" src="https://www.youtube.com/embed/tmoC6ppEgfM?start=8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
             <a href="#" class="btcompra">
-                <p>SIM! EU QUERO COMPRAR AGORA</p>
+                <p>QUERO COMPRAR AGORA!</p>
             </a>
         
             <img src="imagens/ftgarantia.png" alt="Compra Segura" class="garantia">
         </header>
         <section class="ben">
-            <h2>VEJA OS BENEFÍCIOS DE USAR NOSSAS RECEITAS</h2>
+            <h2>VEJA OS BENEFÍCIOS DE ADQUIRIR AS NOSSAS RECEITAS</h2>
             <i aria-hidden="true" class="fas fa-check"></i>
             <div id="benef">
                 <div class="divben">
                         <img src="imagens/check.jpg" alt="check">
                         <h3>NÃO SE PREOCUPE COM A GLICEMIA</h3>
-                        <p>
-                            Todas as receitas foram criadas para te proporcionar uma alimentação com muito sabor e prazer, ao mesmo tempo que te ajudam a ter o controle dos índices glicêmicos.
+                        <p>Todas as receitas foram criadas para te proporcionar uma alimentação com muito sabor e que te ajudam a controlar os índices glicêmicos.                            
                         </p>
                 </div>
                 <div class="divben">
                     <img src="imagens/check.jpg" alt="check">
                         <h3>COMA O QUE VOCÊ GOSTA</h3>
-                        <p>Você vai ter centenas de opções de receitas para nunca enjoar e nunca comer a mesma coisa. O material foi feito para quem quer ter uma vida saudável e sem restrições.</p>
+                        <p>Você vai ter centenas de opções de receitas para nunca enjoar ou comer a mesma coisa todos os dias. O material foi feito para quem quer ter uma vida saudável e sem restrições.</p>
                 </div>
                 <div class="divben">
                     <img src="imagens/check.jpg" alt="check">
                         <h3>TENHA UM SONO DE QUALIDADE
                         </h3>
-                        <p>A má qualidade do SONO é uma consequência do diabetes. As receitas ajudam na neutralização da NEUROPATIA DIABÉTICA, tornando o sono TRANQUILO e DURADOURO</p>
+                        <p>A má qualidade do sono é uma das consequências do diabetes. Mas nossas receitas ajudam na neutralização da neuropatia diabética, tornando o sono tranquilo e duradouro.</p>
                 </div>
                 <div class="divben">
                     <img src="imagens/check.jpg" alt="check">
                         <h3>OS NÍVEIS DE ESTRESSE DIMINUEM</h3>
-                        <p>Ao controlar a glicemia e manter o corpo em equilíbrio, a mente também se beneficia e muito, fazendo com que a liberação de hormônios e o nível de estresse seja baixíssimo.</p>
+                        <p>Ao controlar a glicemia a mente também se beneficia, fazendo com que a liberação de hormônios e o nível de estresse sejam baixos.</p>
                 </div>
             </div>
         </section>
         <section id="fotos1">
-            <h2 class="h2ft1">SÃO MAIS DE 500 RECEITAS PARA TODAS AS REFEIÇÕES DO SEU DIA E QUE VÃO TE AJUDAR A TER UMA VIDA MUITO MAIS SABOROSA E SAUDÁVEL!</h2>
+            <h2 class="h2ft1">São mais de 500 receitas para te ajudar a ter uma vida muito mais saudável e sem restrição!</h2>
                 <div class="sec3">
                     <div class="imgsec3"><img src="imagens/ft001.png" alt="pão">
                         <h2>CAFÉ DA MANHÃ E LANCHES</h2>
-                    <p>RECEITAS PARA CAFÉ DA MANHÃ E LANCHES QUE VOCÊ NUNCA VIU ANTES! MODO DE PREPARO RÁPIDO COM INGREDIENTES PRÁTICOS E BARATOS!</p></div>
+                    <p>Receitas para café da manhã e lanches práticos com ingredientes baratos para não pesar no seu bolso! </p></div>
                     <div class="imgsec3"><img src="imagens/ft002.png" alt="carne">
                         <h2>ALMOÇO E JANTAR</h2>
-                    <p>USE E ABUSE DOS MAIS DIFERENTES E SABOROSOS PRATOS PARA O SEU DIA-A-DIA E EVENTOS ESPECIAIS! FEITOS COM INGREDIENTES QUE VOCÊ TEM EM CASA E QUE NÃO VÃO DESCONTROLAR A SUA GLICEMIA.</p></div>
+                    <p>Use e abuse dos mais diferentes e saborosos pratos para o seu dia a dia e eventos especiais. Feitos com ingredientes que você tem em casa e que não vão descontrolar sua glicemia! </p></div>
                     <div class="imgsec3"><img src="imagens/ft003.png" alt="bolo">
-                        <h2>DOCES E SOBREMESAS</h2>
-                    <p>SÃO MAIS DE 100 OPÇÕES DE DOCES E SOBREMESAS SEM GLÚTEN E SEM AÇÚCAR PARA VOCÊ FAZER QUANTAS VEZES E A QUANTIDADE QUE QUISER E COMER SEM CULPA NENHUMA!</p></div>
+                        <h2>SOBREMESAS</h2>
+                    <p>São mais de 100 opções de sobremesas deliciosas sem glúten e sem açúcar para você fazer e comer sem culpa!</p></div>
                     <div class="imgsec3"><img src="imagens/ft004.png" alt="sopa">
                         <h2>SOPAS E CREMES ZERO</h2>
-                    <p>SOPAS, CREMES, CALDOS, TUDO ELABORADO COM INGREDIENTES NUTRITIVOS E TEMPEROS ESPECIAIS!</p></div>
+                    <p>Tudo elaborado com ingredientes e temperos especiais!</p></div>
                     <div class="imgsec3"><img src="imagens/ft005.jpg" alt="creme">
                         <h2>MOLHOS E PATÊS ZERO</h2>
-                    <p>MOLHOS E PATÊS DE DAR ÁGUA NA BOCA QUE VÃO DAR UM TOQUE ESPECIAL E SABOROSO NOS SEUS PRATOS! A SUA ALIMENTAÇÃO NUNCA MAIS SERÁ A MESMA!</p></div>
+                    <p>Todos de dar água na boca e que vão dar um toque especial e saboroso nos seus pratos! </p></div>
                     <div class="imgsec3"><img src="imagens/ft005.png" alt="ingredientes">
                         <h2>FARINHAS CASEIRAS ZERO</h2>
-                    <p>TODAS SEM GLÚTEN E COM BAIXO ÍNDICE GLICÊMICO PARA VOCÊ PREPARAR BOLOS, PÃES, DOCES E OUTROS PRATOS SEM PREOCUPAÇÃO.</p></div>
+                    <p>Todas sem glúten e com baixo índice glicêmico para você preparar bolos, pães, doces e outros pratos sem preocupação. Sua alimentação nunca mais será a mesma! </p></div>
                 </div>
         </section>
         <section id="sec4">
             <div class="sec4">
-                <h2>SABE AQUELES SINTOMAS DO DIABETES QUE TANTO ATRAPALHA O SEU DIA A DIA? ESQUEÇA! ESQUEÇA TAMBÉM UMA ALIMENTAÇÃO RESTRITA, SEM GRAÇA, QUE TIRA TODO O SEU PRAZER DE COMER!</h2>
-                <p>Sabemos o quão difícil é ter diabetes e conviver com os sintomas todos os dias. Você pode pensar que é uma sentença de prisão perpétua em que está atolado em injeções dolorosas e uma rotina de ter que negar a si mesmo os prazeres da comida para sempre.</p>
-                <p>Mas estamos aqui para te provar o contrário! Agora você pode comer os mais diferentes e saborosos tipos de comidas e ainda manter o equilíbrio para que os níveis de açúcar no sangue não sejam mais um problema para você.</p>
-                <p>Mesmo que você se sinta perdida, ansiosa e mesmo que você não entenda nada sobre nutrição e diabetes! Coma bem, sentindo o gosto dos alimentos e ainda controle a glicemia de forma natural!</p>
+                <h2>Esqueça uma vida com alimentação restrita e que tira todo o seu prazer na hora de comer. A partir de agora, suas comidas serão suas aliadas!</h2>
+                <p>Sabemos o quão difícil é ter diabetes ou ser celíaco e conviver com os sintomas todos os dias. Pode parecer uma sentença de prisão perpétua atolada de injeções e uma rotina longe dos prazeres da alimentação. </p>
+                <p>Mas vamos te provar o contrário. Agora você pode comer os mais diferentes e saborosos tipos de comidas e ainda manter o equilíbrio para que os níveis de açúcar no sangue ou glúten não sejam mais um problema para você.</p>
+                
+                <!--<p>Mesmo que você se sinta perdida, ansiosa e mesmo que você não entenda nada sobre nutrição e diabetes! Coma bem, sentindo o gosto dos alimentos e ainda controle a glicemia de forma natural!</p>
                 <p>No nosso livro digital você vai ter mais de 500 Receitas <span>Testadas</span> e <span>Aprovadas</span>, todas <span>Sem Glúten</span> e <span>Sem Açúcar</span> para todas as Refeições do seu dia! Desenvolvidas para proporcionar uma alimentação equilibrada, saborosa e prática, visando manter a saúde e o equilíbrio hormonal do seu corpo.</p>
-                <p>Estamos falando de pratos variados, saborosos e suculentos! Você vai ter <span>PRAZER</span> em comer novamente!</p>
+                <p>Estamos falando de pratos variados, saborosos e suculentos! Você vai ter <span>PRAZER</span> em comer novamente!</p>-->
             </div>
         </section>
         <section id="fotos2">
@@ -172,8 +172,7 @@
             <div class="sec10l"> <img src="imagens/ft050.png" alt="selo de garantia"></div>
             <div class="sec10r">
             <h2>GARANTIA INCONDICIONAL</h2>
-            <p>
-                Se você comprar nosso e-book e por algum motivo não gostar, basta nos pedir o seu dinheiro de volta em até 7 dias depois da compra e nós devolvemos 100% dele, sem nenhuma burocracia!</p></div>
+            <p>Queremos garantir ao máximo a sua satisfação, por isso liberamos 7 dias para que você decida se vale a pena ou não.</br> Caso decida que não vale a pena para você, basta entrar em contato conosco dentro do prazo, e devolvemos 100% do dinheiro.</p></div>
         </section>
         <section id="sec11">
             <div class="sec11">
@@ -191,7 +190,7 @@
                     <p class="corte">De R$127,00 por</p>
                     <h2 class="preco">R$97,00</h2>
                     <a href="#" class="btcompraverde" >
-                        <p> SIM! EU QUERO COMPRAR AGORA</p>
+                        <p> QUERO COMPRAR AGORA!</p>
                     </a> 
                         <p class="parcela">ou 10x de R$11,08</p>
                         <p class="segure">COMPRA SEGURA</p>
@@ -209,16 +208,17 @@
         </section>
         <section id="duvidas">
             <div class="duvidas">
-                <h2>DÚVIDAS FREQUENTES</h2>
+                <h2>FAQ</h2>
                 <details>
                     <summary>COMO VOU RECEBER O MATERIAL?</summary>
-                    <p>O envio é imediato após a confirmação do pagamento, você receberá um link para download no e-mail. Ele poderá ser acessado no computador, tablet ou celular e imprimido com muita facilidade se você desejar.</p>
+                    <p>O envio é imediato após a confirmação do pagamento. Você receberá um link para download no e-mail. Ele poderá ser acessado no computador, tablet ou celular e impresso com muita facilidade se você desejar.</p>
                 </details>
-               <details><summary>AS RECEITAS SUBSTITUEM A MEDICAÇÃO QUE EU TOMO?</summary><p>Não.</br>
-                Definitivamente, as nossas receitas não incentivam o abandono de todo ou qualquer medicação já receitada</p></details>
-               <details><summary>EU TOMO REMÉDIO CONTROLADO, DEVO CONSULTAR O MÉDICO ANTES DE FAZER AS RECEITAS?</summary><p>As receitas divulgadas nesse material têm apenas a função de fornecer alternativas mais saudáveis, com ingredientes mais nutritivos, o que pode não se aplicar a casos específicos. Consulte sempre um profissional (nutricionista ou médico) para saber quais alimentos e suplementos nutricionais são indicados em seu caso.</p></details>
-               <details><summary>QUAIS SÃO AS FORMAS DE PAGAMENTO? É SEGURO?</summary><p>Trabalhamos com todos os cartões de crédito e com boleto bancário.</br>
-                Dica*: Ao pagar com o cartão de crédito, você garante o desconto e ainda recebe em segundos todo o material completo no seu e-mail e já começa a controlar o diabetes ainda hoje.</p></details>                
+               <details><summary>AS RECEITAS SUBSTITUEM A MEDICAÇÃO QUE EU TOMO?</summary><p>Não.</br> Definitivamente as receitas não incentivam o abandono de todo ou qualquer medicamento já receitado.</p></details>
+               <details><summary>EU TOMO REMÉDIO CONTROLADO, DEVO CONSULTAR O MÉDICO ANTES DE FAZER AS RECEITAS?</summary><p>
+                As receitas divulgadas nesse material têm apenas a função de fornecer alternativas mais saudáveis, com ingredientes mais nutritivos, o que pode não se aplicar a casos específicos. Consulte sempre um profissional (nutricionista ou médico) para saber quais alimentos e suplementos nutricionais são indicados em seu caso.
+                </p></details>
+               <details><summary>QUAIS SÃO AS FORMAS DE PAGAMENTO? É SEGURO?</summary><p>Trabalhamos com todos os cartões de crédito e com boleto bancário.<!--</br>
+                Dica*: Ao pagar com o cartão de crédito, você garante o desconto e ainda recebe em segundos todo o material completo no seu e-mail e já começa a controlar o diabetes ainda hoje.</p>--></details>                
             </div>            
         </section>
         <footer>
@@ -226,7 +226,7 @@
                 <p>Todas as informações e conceitos utilizados aqui tem como objetivo apenas informar e educar. Este site e o e-book 500 Receitas ZERO Açúcar e Glúten foram disponibilizados com esse objetivo e não tem como intenção nenhuma servir ou substituir prescrição médica. Nenhuma informação deste site e do e-book 500 Receitas ZERO Açúcar e Glúten substitui uma consulta com seu médico, nutricionista ou profissional da saúde. Sempre procure um profissional da saúde antes de começar qualquer mudança na sua alimentação, inclusive o uso das receitas deste e-book.</p>
                     <p>Se por algum motivo você não gostar do material, ou achar que não serve pra você, não se preocupe, você tem uma garantia de 7 dias úteis a partir do momento da entrega. Para mais informações entre em contato conosco: contato@500receitaszero.com</p>
                     <p>COPYRIGHT 2021 | 500 RECEITAS ZERO AÇÚCAR E GLÚTEN – TODOS OS DIREITOS RESERVADOS.</p>
-                    <p>fim</p>
+                    <p>end</p>
             </div>
         </footer>
     </main>
